[package]
name = "homestar-wasm"
version = { workspace = true }
description = "Homestar Wasm / Wasmtime implementation and IPLD <=> WIT interpreter"
keywords = ["wasm", "wasmtime", "wit", "ipld", "ipvm"]
categories = ["wasm", "execution-engines"]
license = { workspace = true }
readme = "README.md"
edition = { workspace = true }
rust-version = { workspace = true }
documentation = "https://docs.rs/homestar-wasm"
repository = { workspace = true }
authors = { workspace = true }

[lib]
path = "src/lib.rs"
bench = false
doctest = true

[dependencies]
# return to version.workspace = true after the following issue is fixed:
# https://github.com/DevinR528/cargo-sort/issues/47
anyhow = { workspace = true }
async-trait = { workspace = true }
atomic_refcell = { workspace = true }
enum-as-inner = { workspace = true }
heck = "0.4"
homestar-core = { version = "0.1", path = "../homestar-core" }
itertools = { workspace = true }
libipld = { workspace = true }
rust_decimal = { version = "1.32", default-features = false }
serde = { workspace = true }
stacker = "0.1"
thiserror = { workspace = true }
tracing = { workspace = true }
wasi-common = { version = "11.0", default-features = false }
wasmparser = "0.115"
wasmtime = { version = "13.0", default-features = false, features = [
  "async",
  "component-model",
  "cranelift",
  "parallel-compilation",
  "pooling-allocator",
  "vtune",
  "wat",
] }
wasmtime-component-util = "13.0"
wasmtime-wasi = { version = "11.0", default-features = false, features = [
  "tokio",
] }
wat = "1.0"
wit-component = "0.14"

[dev-dependencies]
criterion = "0.5"
serde_ipld_dagcbor = { workspace = true }
tokio = { workspace = true }

[features]
default = ["wasmtime/default"]
dev = []

[package.metadata.docs.rs]
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]
