[package]
name = "homestar-wasm"
version = { workspace = true }
description = "Homestar Wasm / Wasmtime implementation and IPLD <=> WIT interpreter"
keywords = ["ipld", "ipvm", "wasm", "wasmtime", "wit"]
categories = { workspace = true }
license = { workspace = true }
readme = "README.md"
edition = { workspace = true }
rust-version = { workspace = true }
documentation = "https://docs.rs/homestar-wasm"
repository = "https://github.com/ipvm-wg/homestar/tree/main/homestar-wasm"
authors = { workspace = true }

[lib]
path = "src/lib.rs"
bench = false
doctest = true

[dependencies]
# return to version.workspace = true after the following issue is fixed:
# https://github.com/DevinR528/cargo-sort/issues/47
anyhow = { workspace = true }
async-trait = { workspace = true }
atomic_refcell = { workspace = true }
enum-as-inner = { workspace = true }
heck = "0.4"
homestar-invocation = { version = "0.3", path = "../homestar-invocation" }
homestar-workspace-hack = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
libipld = { workspace = true }
llm-chain = { git = "https://github.com/sobelio/llm-chain.git", optional = true }
llm-chain-llama = { git = "https://github.com/sobelio/llm-chain.git", optional = true }
rust_decimal = { version = "1.33", default-features = false }
serde = { workspace = true }
stacker = "0.1"
thiserror = { workspace = true }
tracing = { workspace = true }
wasmparser = "0.200"
wasmtime = { version = "18.0", default-features = false, features = [
  "async",
  "component-model",
  "cranelift",
  "parallel-compilation",
  "pooling-allocator",
  "wat",
] }
wasmtime-component-util = "18.0"
wasmtime-wasi = { version = "18.0", default-features = false, features = [
  "tokio",
  "preview1-on-preview2",
] }
wat = "1.200"
wit-component = "0.200"

[dev-dependencies]
criterion = "0.5"
serde_json = { workspace = true }
tokio = { workspace = true }

[features]
default = ["wasmtime/default"]
llm = ["dep:llm-chain", "dep:llm-chain-llama"]
test-utils = []

[package.metadata.docs.rs]
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.cargo-machete]
ignored = ["homestar-workspace-hack"]

[package.metadata.cargo-udeps.ignore]
normal = ["homestar-workspace-hack"]
