[package]
name = "homestar"
version = "0.1.0"
description = ""
keywords = []
categories = []

include = ["/src", "README.md", "LICENSE"]
license = { workspace = true }
readme = "README.md"
edition = { workspace = true }
rust-version = { workspace = true }
documentation = "https://docs.rs/homestar"
repository = "https://github.com/ipvm-wg/homestar"
authors = { workspace = true }

[lib]
path = "src/lib.rs"
bench = false
doctest = true
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "homestar"
path = "src/main.rs"
doc = false
bench = false

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.1", features = ["derive"] }
derive_more = "0.99"
diesel = { version = "2.0", features = ["sqlite"] }
diesel_migrations = "2.0"
dotenvy = "0.15"
enum-as-inner = "0.5"
enum-assoc = "0.4"
env_logger = "0.10"
generic-array = "0.14"
hex = "0.4"
homestar-wasm = { version = "0.1", path = "../homestar-wasm" }
ipfs-api = "0.17"
ipfs-api-backend-hyper = { version = "0.6", features = ["with-builder"] }
itertools = "0.10"
libipld = "0.16"
libipld-core = { version = "0.16", features = ["serde-codec", "serde"] }
libp2p = { version = "0.51", features = ["kad", "request-response", "macros", "identify", "mdns", "floodsub", "gossipsub", "tokio", "dns", "tcp", "noise", "yamux", "websocket"] }
proptest = { version = "1.1", optional = true }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
signature = "2.0"
thiserror = "1.0"
tokio = { version = "1.26", features = ["io-util", "io-std", "macros", "rt", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"
ucan = { version = "0.1", path = "../../../rs-ucan/ucan" }
url = "2.3"
xid = "1.0"

[dev-dependencies]
criterion = "0.4"

[features]
default = []
test_utils = ["proptest"]
