[package]
name = "ipvm"
version = "0.1.0"
description = ""
keywords = []
categories = []

include = ["/src", "README.md", "LICENSE"]
license = { workspace = true }
readme = "README.md"
edition = { workspace = true }
rust-version = { workspace = true }
documentation = "https://docs.rs/ipvm"
repository = "https://github.com/ipvm-wg/ipvm"
authors = { workspace = true }

[lib]
path = "src/lib.rs"
bench = false
doctest = true
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "ipvm"
path = "src/main.rs"
doc = false
bench = false

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.1", features = ["derive"] }
derive_more = "0.99"
diesel = { version = "2.0", features = ["sqlite"] }
dotenvy = "0.15"
env_logger = "0.10"
ipfs-api = "0.17"
ipfs-api-backend-hyper = { version = "0.6", features = ["with-builder"] }
ipvm-wasm = { version = "0.1", path = "../ipvm-wasm" }
itertools = "0.10"
libipld = "0.16"
libipld-core = { version = "0.16", features = ["serde-codec", "serde"] }
libp2p = { git = "https://github.com/libp2p/rust-libp2p", features = ["kad", "request-response", "macros", "identify", "mdns", "floodsub", "gossipsub", "tokio", "dns", "tcp", "noise", "yamux", "websocket"] }
proptest = { version = "1.1", optional = true }
serde = { version = "1.0", features = ["derive"] }
signature = "2.0"
thiserror = "1.0"
tokio = { version = "1.24", features = ["io-util", "io-std", "macros", "rt", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"
ucan = "0.1"
url = "2.3"
xid = "1.0"

[dev-dependencies]
criterion = "0.4"

[features]
default = []
test_utils = ["proptest"]
