[package]
name = "websocket-relay"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
clap = "4.3"
homestar-runtime = { path = "../../homestar-runtime", features = [
  "ipfs",
  "websocket-notify",
  "ansi-logs",
] }
miette = { version = "5.10", features = ["fancy"] }
retry = "2.0"
tracing = "0.1"

[[bin]]
name = "example-websocket-relay"
path = "src/main.rs"
