[package]
name = "websocket-relay"
rust-version = "1.73.0"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
clap = "4.4"
homestar-runtime = { path = "../../homestar-runtime", default-features = false, features = [
  "ansi-logs",
  "ipfs",
  "monitoring",
  "websocket-notify",
] }
homestar-workspace-hack = { workspace = true }
miette = { version = "5.10", features = ["fancy"] }
retry = "2.0"
sysinfo = { version = "0.29", default-features = false }
tracing = "0.1"

[[bin]]
name = "example-websocket-relay"
path = "src/main.rs"
doc = false
test = false
