[package]
name = "homestar-functions-add"
publish = false
version = "0.1.0"
edition = { workspace = true }
rust-version = { workspace = true }

[dependencies]
homestar-workspace-hack = { workspace = true }
wit-bindgen = "0.16"

[lib]
doc = false
bench = false
crate-type = ["cdylib"]

[features]
default = []

[package.metadata.cargo-machete]
ignored = ["homestar-workspace-hack"]

[package.metadata.cargo-udeps.ignore]
normal = ["homestar-workspace-hack"]
