[package]
name = "homestar-functions-add"
publish = false
version = "0.1.0"
edition = { workspace = true }
rust-version = { workspace = true }

[dependencies]
wit-bindgen = { version = "0.18.0", default-features = false, features = [
  "realloc",
] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:add"
