[package]
name = "homestar-functions-subtract"
publish = false
version = "0.1.0"
edition = { workspace = true }
rust-version = { workspace = true }

[dependencies]
wit-bindgen-rt = "0.20.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:homestar-functions-subtract"
