[package]
name = "homestar-functions-test"
publish = false
version = "0.1.0"
edition = { workspace = true }
rust-version = { workspace = true }

[dependencies]
base64 = "0.21"
image = { version = "0.24", default-features = false, features = ["png"] }
wit-bindgen = "0.17"

[dev-dependencies]
image = { version = "0.24", default-features = false, features = [
  "png",
  "openexr",
  "jpeg",
] }

[lib]
doc = false
bench = false
crate-type = ["cdylib"]

[features]
default = []
run-image-tests = []
