[package]
name = "homestar-functions-test"
publish = false
version = "0.1.0"
edition = { workspace = true }
rust-version = { workspace = true }

[dependencies]
base64 = "0.21"
image = { version = "0.24", default-features = false, features = ["png"] }
wit-bindgen = { version = "0.18.0", default-features = false, features = [
  "realloc",
] }

[dev-dependencies]
image = { version = "0.24", default-features = false, features = [
  "png",
  "openexr",
  "jpeg",
] }

[lib]
doc = false
bench = false
crate-type = ["cdylib"]

[features]
default = []
run-image-tests = []

[package.metadata.component]
package = "component:homestar-functions-test"

[package.metadata.component.dependencies]

[package.metadata.component.target]

[package.metadata.component.target.dependencies]
"wasi:logging" = { path = "wit/deps/logging" }
"homestar:host" = { path = "wit/deps/helpers" }
