[package]
name = "homestar-runtime-tests-proc-macro"
version = "0.0.0"
publish = false
edition = { workspace = true }
rust-version = { workspace = true }

[lib]
proc_macro = true

[dependencies]
homestar-core = { version = "0.1", path = "../../../../homestar-core", features = [ "test-utils" ] }
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
tokio = { workspace = true }
