[package]
name = "homestar-runtime-tests-proc-macro"
version = "0.0.0"
publish = false
edition = { workspace = true }
rust-version = { workspace = true }

[lib]
proc_macro = true
doc = false

[dependencies]
quote = "1.0"
syn = "2.0"
homestar-workspace-hack = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["homestar-workspace-hack"]

[package.metadata.cargo-udeps.ignore]
normal = ["homestar-workspace-hack"]
